# InterviewAI

./: .env  .gitignore  README.md  api.py  clean_resume.txt  llm.py  package-lock.json  package.json  parsed_resume.txt  pyproject.toml  requirements.txt  resumeparser.py  start_all.bat
backend/assessment/: README.md  api.py  assessment_engine.py  config.py  llm.py  main.py
backend/resume-parser/: .env.example  api.py  llm.py  main.py
backend/video-analysis/: .env.example  config.py  requirements.txt
backend/video-analysis/api/: server.py
backend/video-analysis/audio/: extract_audio.py
backend/video-analysis/llm/: analyze_audio.py
backend/video-analysis/pipeline/: process_video.py
backend/video-analysis/video/: id_card_yolo.py  validate_video.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/auth/: AuthProvider.jsx  Login.jsx  RequireAuth.jsx
frontend/src/components/: Button.jsx  Footer.jsx  Loader.jsx  Navbar.jsx
frontend/src/firebase/: firebase.js
frontend/src/pages/: Admin.jsx  Home.jsx  HopeInfo.jsx  McqQuiz.jsx  NotFound.jsx  PepInfo.jsx  Result.jsx  ResumeUpload.jsx  VideoInterview.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
